--- a/src/global.css
+++ b/src/global.css
@@ -1,43 +1,69 @@
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body {
+  background: linear-gradient(rgba(0, 0, 0, 0.8), #161616);
+  color: white;
+}
+
 .kontainer {
   display: flex;
   margin: 15px;
   padding: 15px;
-  background-color: red; }
+}
 
 .anchor--unstyle {
   text-decoration: none;
-  border-bottom: 0px; }
-  .anchor--unstyle:hover {
-    color: white;
-    border-bottom: 0px solid;
-    background-color: #68baa7; }
+  border-bottom: 0px;
+}
+.anchor--unstyle:hover {
+  color: white;
+  border-bottom: 0px solid;
+  background-color: #68baa7;
+}
 
 .text-primary {
-  color: #0e0b16; }
+  color: #0e0b16;
+}
 
 .text-secondary {
-  color: #fba100; }
+  color: #fba100;
+}
 
 .text-tertiary {
-  color: #4717f6; }
+  color: #4717f6;
+}
 
 .text-quartery {
-  color: #e7dfdd; }
+  color: #e7dfdd;
+}
 
 .text-danger {
-  color: red; }
+  color: red;
+}
 
 .text-medium {
-  font-weight: 500; }
+  font-weight: 500;
+}
 
 .text-heavy {
-  font-weight: bolder; }
+  font-weight: bolder;
+}
 
 .button {
-  padding: 10px 15px; }
+  padding: 10px 15px;
+}
 
 .button--secondary {
-  background-color: #fba100;
+  background-color: #4717f6;
   color: white;
   border: 0px;
-  border-radius: 25px; }
+  border-radius: 25px;
+}
