--- a/src/global.scss
+++ b/src/global.scss
@@ -1,5 +1,19 @@
 @import './vars.scss';
 
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body {
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgb(22, 22, 22));
+}
+
 .kontainer {
   display: flex;
   margin: 15px;
@@ -50,7 +64,7 @@
 }
 
 .button--secondary {
-  background-color: $color-2;
+  background-color: $color-tertiary;
   color: white;
   border: 0px;
   border-radius: 25px;
