--- a/src/Components/Kartu/KartuMovie/KartuMovie.scss
+++ b/src/Components/Kartu/KartuMovie/KartuMovie.scss
@@ -7,25 +7,17 @@
   padding: 0.7em 0;
 }
 
-.wrapper {
-  display: flex;
-  padding: 1em 0;
-  overflow-x: auto;
-}
-
-.wrapper .title {
-  color: #1a1a1a;
-  text-align: center;
-  margin-bottom: 10px;
-}
-
 .content {
   position: relative;
   width: 60%;
-  min-width: 150px;
-  margin: auto;
+  min-width: 250px;
   overflow: hidden;
   padding: 0 5px;
+  .content-title {
+    color: #ffffff;
+    text-align: center;
+    margin-bottom: 10px;
+  }
 }
 
 .content .content-overlay {
@@ -49,6 +41,9 @@
 
 .content-image {
   width: 100%;
+  object-fit: cover;
+  max-height: 100%;
+  min-height: 100%;
 }
 
 .content-details {
