--- a/src/Components/Kartu/Wrapper/Wrapper.css
+++ b/src/Components/Kartu/Wrapper/Wrapper.css
@@ -2,11 +2,9 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 2fr));
   grid-column-gap: 5px;
-  grid-row-gap: 10px;
-}
+  grid-row-gap: 10px; }
 
 .wrapper .title {
   color: #1a1a1a;
   text-align: center;
-  margin-bottom: 10px;
-}
+  margin-bottom: 10px; }
