--- a/src/Components/Kartu/kartu.css
+++ b/src/Components/Kartu/kartu.css
@@ -3,5 +3,14 @@
   color: white;
   text-align: center;
   text-transform: capitalize;
-  padding: 0.7em 0;
-}
+  padding: 0.7em 0; }
+
+.wrapper {
+  display: flex;
+  padding: 1em 0;
+  overflow-x: auto; }
+
+.wrapper .title {
+  color: #1a1a1a;
+  text-align: center;
+  margin-bottom: 10px; }
