--- a/src/global.css
+++ b/src/global.css
@@ -5,55 +5,63 @@
   padding: 0;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 body {
   background: linear-gradient(rgba(0, 0, 0, 0.8), #161616);
-  color: white;
-}
+  color: white; }
 
 .kontainer {
   display: flex;
   margin: 15px;
   padding: 15px;
-  background-color: red;
-}
+  background-color: red; }
 
 .anchor--unstyle {
   text-decoration: none;
-  border-bottom: 0px;
-}
-.anchor--unstyle:hover {
-  color: white;
-  border-bottom: 0px solid;
-  background-color: #68baa7;
-}
+  border-bottom: 0px; }
+  .anchor--unstyle:hover {
+    color: white;
+    border-bottom: 0px solid;
+    background-color: #68baa7; }
 
 .text-primary {
-  color: #0e0b16;
-}
+  color: #0e0b16; }
 
 .text-secondary {
-  color: #fba100;
-}
+  color: #fba100; }
 
 .text-tertiary {
-  color: #4717f6;
-}
+  color: #4717f6; }
 
 .text-quartery {
-  color: #e7dfdd;
-}
+  color: #e7dfdd; }
 
 .text-danger {
-  color: red;
-}
+  color: red; }
 
 .text-medium {
-  font-weight: 500;
-}
+  font-weight: 500; }
 
 .text-heavy {
-  font-weight: bolder;
-}
+  font-weight: bolder; }
+
+.button {
+  border: 2px solid black;
+  background-color: white;
+  color: black;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer; }
+
+.button--secondary {
+  border: 2px solid #a239ca;
+  color: black;
+  border: 0px;
+  border-radius: 25px; }
+
+.button--tertiary {
+  background-color: #4717f6;
+  color: white;
+  border: 0px;
+  border-radius: 25px; }
