--- a/src/vars.scss
+++ b/src/vars.scss
@@ -1,11 +1,9 @@
-$background-color-primary: #343a40;
+$background-color-primary: linear-gradient(rgba(0, 0, 0, 0.8), rgb(22, 22, 22));
+$background-color-secondary: #343a40;
 
 $color-primary: #0e0b16;
 $color-secondary: #a239ca;
 $color-tertiary: #4717f6;
 $color-quartery: #e7dfdd;
 
-$color-1: #68baa7;
-$color-2: #fba100;
-$color-3: #6c648b;
-$color-4: #b6a19e;
+$color-hover: white;
