--- a/src/Components/Partials/Search/search.css
+++ b/src/Components/Partials/Search/search.css
@@ -1,6 +1,6 @@
 .search {
   border: 0px;
-  background-color: #343a40;
+  background-color: linear-gradient(rgba(0, 0, 0, 0.8), #161616);
   color: #e7dfdd;
   padding: 5px 0px; }
   .search:focus {
