--- a/src/Components/Partials/footer.css
+++ b/src/Components/Partials/footer.css
@@ -1,6 +1,6 @@
 .footer {
   display: flex;
-  background-color: #343a40;
+  background-color: linear-gradient(rgba(0, 0, 0, 0.8), #161616);
   justify-content: space-between;
   align-items: center;
   color: white; }
