--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,21 @@
-* {
+*,
+*:before,
+*:after {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
-}
+  color: white; }
 
 body {
-  background-color: hsl(0, 0, 0);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+  background: linear-gradient(rgba(0, 0, 0, 0.8), #161616);
+  color: white; }
+
+.anchor--unstyle {
+  text-decoration: none;
+  border-bottom: 0px; }
+  .anchor--unstyle:hover {
+    color: white;
+    border-bottom: 0px solid;
+    background-color: #0e0b16; }
