--- a/src/Components/Partials/header.css
+++ b/src/Components/Partials/header.css
@@ -1,3 +1,9 @@
 .nav-brand {
   width: 110px;
   height: 30px; }
+
+.search {
+  background-color: #343a40;
+  border: 0px solid red;
+  border-bottom: 1px solid red;
+  margin-left: 15px; }
